# thermal-analiser

./: .dockerignore  .replit  Dockerfile  ThermoReport_AI_Project_Handoff.txt  docker-compose.yml  logs.txt  main.py  pyproject.toml  render.yaml  requirements.txt  test_server.py  test_thermal_image.py  thermal_analysis_results.json
FrontEnd/: DebugPanel.tsx  ImageOverlay.tsx  StatusIndicator.tsx  UploadZone.tsx  index.html  package-lock.json  package.json  tailwind.config.ts
FrontEnd/src/: App.tsx  index.css  vite-env.d.ts
FrontEnd/src/components/: DebugPanel.tsx  ImageOverlay.tsx  StatusIndicator.tsx  UploadZone.tsx
config/: application.py
eb-deploy/: .dockerignore  Dockerfile  requirements-prod.txt
utils/: bbox.py  utils.py
