[project]
name = "thermal-analyzer"
version = "0.1.0"
description = "Thermal image analyzer for solar panel fault detection"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.7,<3.8"
dependencies = [
    "Flask==1.1.2",
    "Flask-Cors==3.0.9",
    "Flask-RESTful==0.3.8",
    "python-dotenv==0.12.0",
    "scikit-image==0.16.2",
    "numpy==1.18.5",
    "tensorflow==2.3.1",
    "opencv-python==4.4.0.46",
    "scipy==1.5.3",
    "certifi==2020.6.20",
    "Pillow==8.0.1",
    "Werkzeug==1.0.1",
]
